# Lyli-Backend

./: .gitignore  CMakeLists.txt  README.md  contributing.md  example_dotenv
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
scripts/: build-and-run.sh  build.sh
src/: Session.cpp  Session.hpp  main.cpp
src/API/: Router.cpp  Router.hpp
src/API/Handler/: Login.cpp  Login.hpp  Ping.cpp  Ping.hpp  Register.cpp  Register.hpp
src/API/Handler/User/: UserCheck.cpp  UserCheck.hpp
src/DB/: Client.cpp  Client.hpp  Collection.cpp  Collection.hpp  Database.cpp  Database.hpp
src/Dotenv/: Loader.cpp  Loader.hpp  Parser.cpp  Parser.hpp
src/Security/: EmailChecker.cpp  EmailChecker.hpp  KeyPair.cpp  KeyPair.hpp  PasswordHasher.cpp  PasswordHasher.hpp  SessionToken.cpp  SessionToken.hpp  SpamAgent.cpp  SpamAgent.hpp
src/Server/: TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  TcpServer.hpp
src/Server/HTTP/: HttpObject.cpp  HttpObject.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp
src/Signals/: SignalHandler.cpp  SignalHandler.hpp
src/Utils/: BsonPointer.hpp  DatabaseUtils.hpp  FormattedTime.cpp  FormattedTime.hpp  HttpUtils.hpp  Logger.cpp  Logger.hpp  MongoPointer.hpp  StringUtils.cpp  StringUtils.hpp
